@@ -1,3 +1,15 @@
+2010-06-29  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r62129.
+        http://trac.webkit.org/changeset/62129
+        https://bugs.webkit.org/show_bug.cgi?id=41362
+
+        Needed to roll out r62052 (see bug 41357) (Requested by aroben
+        on #webkit).
+
+        * bindings/js/ScriptEventListener.cpp:
+        (WebCore::createWindowAttributeEventListener):
+
 2010-06-29  Beth Dakin  <bdakin@apple.com>
 
         Reviewed by Darin Adler.
